# photon

./: .gitignore  CMakeLists.txt  LICENSE.md  Readme.md  photon.sln
doc/: Changelog.md  Contributing.md  Implementation.md  Todo.md  Tutorial.md
include/: Entity.hpp  entitymanager.hpp  nontemplate_entity.ipp  nontemplate_entitymanager.ipp  nontemplate_system.ipp  photon.hpp  system.hpp  template_component.ipp  template_entity.ipp  template_entitymanager.ipp  template_system.ipp
photon/: ReadMe.txt  Readme.md  photon.vcxproj  photon.vcxproj.filters
photon/doc/: Contributing.md  Doxyfile  Implementation.md  Tutorial.md
photon/include/: component.hpp  entitymanager.hpp  photon.hpp  system.hpp  template_component.ipp  template_component.tpp  template_entitymanager.ipp  template_entitymanager.tpp  template_system.ipp  template_system.tpp
photon/src/: component.cpp  entitymanager.cpp  system.cpp
src/: component.cpp  entitymanager.cpp  system.cpp
